--- a/style.css
+++ b/style.css
@@ -1,33 +1,61 @@
-body{
-    background-color:rgb(51, 230, 35);   
-   }
-   h2{
-     color: blueviolet;
-     background-color: gold;  
-   }
-   p{
-      padding-top: 10px;
-      font-size: 25px; 
-   }
-   #show_sketch{
-     float: right;  
-   }
-   canvas{
-    border-radius: 15px;
-    margin-top: 20px;
-    border: 5px solid yellow;
+body
+{
+background-color:#24eb24;
+}
+
+h1
+{
+  font-family: 'Special Elite', fantasy;
+  color:rgb(38, 0, 255);
+  background-color: cornsilk;
+}
+
+#sketch_name
+{
+  color:red;
+}
+
+#show_sketch
+{
+  float:right;
+}
+
+canvas 
+  {
+    border:5px solid white;
+    border-radius:20px;
+    margin-top:150px;
+    box-shadow:5px 5px 5px grey;
+    box-shadow: 1px 1px 38px #ffffff;
     animation-name: example;
     animation-duration: 4s;
-    animation-iteration-count: infinite;   
-   }
-   @keyframes example {
-    from{box-shadow:1px 1px 38px red;}
-    to{box-shadow:1px 1px 38px blue;}   
-   }
-#score{
- margin-right: 1000px;   
+    animation-iteration-count: infinite;
 }
-#time{
-  margin-left: 1000px; 
-  margin-bottom: 900px; 
+@keyframes example {
+
+  from {box-shadow: 1px 1px 38px grey;}
+  to {box-shadow: 1px 1px 38px white;}
+
+}
+
+
+p, span
+  {
+    padding-top:10px;
+    font-family: 'Special Elite', fantasy;
+    font-size:25px;
+    
+  }
+
+#score
+{
+  font-size:35px;
+  margin-left: 20px;
+}
+
+#time
+{
+  font-size:35px;
+  float: right;
+  margin-right: 20px;
 }
